# Crypto-portfolio-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  ape-config.yaml  debug_address.py  pyproject.toml  test_protocol_detection.py  test_zerion_debug.py  test_zerion_raw.py
examples/: test_lido_positions.py
scripts/: __init__.py  fetch_aave_positions.py
src/crypto_portfolio_tracker/: __about__.py
src/crypto_portfolio_tracker/cli/: __init__.py  main.py
src/crypto_portfolio_tracker/core/: __init__.py  aggregator.py  models.py  registry.py  scanner.py
src/crypto_portfolio_tracker/data/: __init__.py  addresses.py  contracts.yaml  loader.py
src/crypto_portfolio_tracker/integrations/: __init__.py  zerion.py
src/crypto_portfolio_tracker/pricing/: __init__.py  chainlink.py  defillama.py
src/crypto_portfolio_tracker/protocols/: __init__.py  aave.py  base.py  beefy.py  beefy_api.py  etherfi.py  lido.py  morpho.py  morpho_api.py
src/crypto_portfolio_tracker/rpc/: __init__.py  cache.py  multicall.py  provider.py  retry.py
tests/: conftest.py  test_aave_positions.py  test_data_loader.py  test_models.py  test_registry.py
vhs/: demo-etherfi.tape  demo-lido-wsteth.tape  demo-lido.tape  demo-mark-cuban.tape  demo-multi-chain.tape  demo-vitalik.tape  demo.tape
